fix: use fully-qualified holder types and map ICustomAttributeProvider
- HolderTypeResolver now emits fully-qualified compat holder types
  (io.github.ningpp.compat.ObjectHolder<T>, IntHolder, etc.) so that
  ref/out holders no longer clash with user-defined nested types such
  as ReflectionXmlSerializationReader.ObjectHolder.
- Add compat ICustomAttributeProvider interface and map
  System.Reflection.ICustomAttributeProvider so XmlAttributes,
  SoapAttributes and reflection importers compile.
- Harden iterate-xml-fix.ps1 argument formatting and ensure DestDir
  exists before writing logs.